Release 1.6.5
---- Changes
*Debugger:
- Fixed indexing bug
- Remove issue whereas it breaks java projects debugging

*Completion:
- Fixed a few bugs
- Allow for completion after ?. -> and ?->

*Go to declaration:
- you can use "go to declaration" to go to a varable or type declaration(both local and remote) in Fantom code.

*Tales frameowrk integration:
- Create a tales project wizzard
- Run a tales project ("Hot" reload development mode)

Fixed standalone Memory settings
Based on NB 6.9.1
Updated Fantom 1.0.56 java libs
----