@@ -54,7 +54,9 @@
 	</target>
 
 	<target name="build-launchers" depends="suite.build-launchers">
-		<replace file="build/launcher/etc/${app.name}.conf" token="-J-Xms24m -J-Xmx64m" value="-J-Xms64m -J-Xmx512m"/>
+            <!-- NB alone needs > 100MB of perm space, won't work wih default settings -->
+            <!-- Classloader unloading helps big time as well (permspace) -->
+		<replace file="build/launcher/etc/${app.name}.conf" token="-J-Xms24m -J-Xmx64m" value="-J-Xmx956m  -J-XX:MaxPermSize=356M -J-XX:+CMSClassUnloadingEnabled -J-XX:+CMSPermGenSweepingEnabled"/>
 	</target>
 
 </project>
